<resources>
    <string name="app_name">appy</string>
    <string name="welcome_to_tinder_beta">WELCOME TO TINDER BETA</string>
    <string name="log_out">LOG OUT</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">LOG IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="title_activity_copy_paste">copy_paste</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_copy">copy</string>
    <string name="in_your_service">IN YOUR SERVICE</string>
    <string name="services">SERVICES</string>
    <string name="notes">NOTES</string>
    <string name="split_up">SPLIT-UP</string>
    <string name="tic_tac_toe">TIC-TAC-TOE</string>
    <string name="converter">CONVERTER</string>
    <string name="think1">THINK1</string>
    <string name="think2">THINK2</string>
</resources>